Modiy some locale data throught google translate whcih doesn't provided data from CLDR

--- a/js/data/locale/ig/unitfmt.json
+++ b/js/data/locale/ig/unitfmt.json
@@ -3,15 +3,15 @@
         "long": {
             "g-force": "#{n} G",
             "meter-per-square-second": "#{n} m/s²",
-            "revolution": "#{n} rev",
-            "radian": "#{n} rad",
+            "revolution": "#{n} mgbanwe",
+            "radian": "#{n} radian",
             "degree": "#{n}°",
             "arc-minute": "#{n}′",
             "arc-second": "#{n}″",
-            "square-kilometer": "#{n} km²",
+            "square-kilometer": "#{n} square-kilomita",
             "hectare": "#{n} ha",
-            "square-meter": "#{n} m²",
-            "square-centimeter": "#{n} cm²",
+            "square-meter": "#{n} square mita",
+            "square-centimeter": "#{n} square sentimita",
             "square-mile": "#{n} mi²",
             "acre": "#{n} ac",
             "square-yard": "#{n} yd²",
@@ -62,7 +62,7 @@
             "calorie": "#{n} cal",
             "kilojoule": "#{n} kJ",
             "joule": "#{n} J",
-            "kilowatt-hour": "#{n} kWh",
+            "kilowatt-hour": "#{n} kilowatt awa",
             "electronvolt": "#{n} eV",
             "british-thermal-unit": "#{n} Btu",
             "therm-us": "#{n} US therm",
@@ -79,10 +79,10 @@
             "pixel-per-centimeter": "#{n} ppcm",
             "pixel-per-inch": "#{n} ppi",
             "earth-radius": "#{n} R⊕",
-            "kilometer": "#{n} km",
-            "meter": "#{n} m",
-            "decimeter": "#{n} dm",
-            "centimeter": "#{n} cm",
+            "kilometer": "#{n} kilomita",
+            "meter": "#{n} mita",
+            "decimeter": "#{n} decimita",
+            "centimeter": "#{n} centimita",
             "millimeter": "#{n} mm",
             "micrometer": "#{n} μm",
             "nanometer": "#{n} nm",
@@ -105,8 +105,8 @@
             "lumen": "#{n} lm",
             "solar-luminosity": "#{n} L☉",
             "metric-ton": "#{n} t",
-            "kilogram": "#{n} kg",
-            "gram": "#{n} g",
+            "kilogram": "#{n} kilogram",
+            "gram": "#{n} gram",
             "milligram": "#{n} mg",
             "microgram": "#{n} μg",
             "ton": "#{n} tn",
@@ -155,10 +155,10 @@
             "cubic-inch": "#{n} in³",
             "megaliter": "#{n} ML",
             "hectoliter": "#{n} hL",
-            "liter": "#{n} l",
-            "deciliter": "#{n} dL",
-            "centiliter": "#{n} cL",
-            "milliliter": "#{n} mL",
+            "liter": "#{n} lita",
+            "deciliter": "#{n} deciliter",
+            "centiliter": "#{n} centimita",
+            "milliliter": "#{n} milliliter",
             "pint-metric": "#{n} mpt",
             "cup-metric": "#{n} mc",
             "acre-foot": "#{n} ac ft",
@@ -182,24 +182,24 @@
             "quart-imperial": "#{n} qt Imp.",
             "coordinateUnit": "",
             "foot-per-second": "#{n} ft/s",
-            "kilometer-per-second": "#{n} km/s",
-            "mile-per-second": "#{n} mi/s",
-            "kilometer-per-liter": "#{n} km/l",
-            "bit-per-second": "#{n} bit/s",
-            "kilobit-per-second": "#{n} kb/s",
-            "megabit-per-second": "#{n} Mb/s",
-            "gigabit-per-second": "#{n} Gb/s",
-            "terabit-per-second": "#{n} Tb/s",
-            "byte-per-second": "#{n} byte/s",
-            "kilobyte-per-second": "#{n} kB/s",
-            "megabyte-per-second": "#{n} MB/s",
-            "gigabyte-per-second": "#{n} GB/s",
-            "terabyte-per-second": "#{n} TB/s",
-            "byte-per-hour": "#{n} byte/h",
-            "kilobyte-per-hour": "#{n} kB/h",
-            "megabyte-per-hour": "#{n} MB/h",
-            "gigabyte-per-hour": "#{n} GB/h",
-            "terabyte-per-hour": "#{n} TB/h"
+            "kilometer-per-second": "#{n} kilomita kwa nkeji",
+            "mile-per-second": "#{n} mile kwa nkeji",
+            "kilometer-per-liter": "#{n} kilomita kwa lita",
+            "bit-per-second": "#{n} bit-kwa-sekọnd",
+            "kilobit-per-second": "#{n} kilobit kwa nkeji",
+            "megabit-per-second": "#{n} megabit kwa nkeji",
+            "gigabit-per-second": "#{n} gigabit kwa nkeji",
+            "terabit-per-second": "#{n} erabit kwa nkeji",
+            "byte-per-second": "#{n} byte kwa nkeji",
+            "kilobyte-per-second": "#{n} kilobyte kwa nkeji",
+            "megabyte-per-second": "#{n} megabyte kwa nkeji",
+            "gigabyte-per-second": "#{n} gigabyte kwa nkeji",
+            "terabyte-per-second": "#{n} terabyte kwa nkeji",
+            "byte-per-hour": "#{n} byte kwa elekere",
+            "kilobyte-per-hour": "#{n} kilobyte kwa elekere",
+            "megabyte-per-hour": "#{n} megabyte kwa elekere",
+            "gigabyte-per-hour": "#{n} gigabyte kwa elekere",
+            "terabyte-per-hour": "#{n} terabyte kwa elekere"
         },
         "short": {
             "g-force": "#{n} G",
