--- a/js/data/locale/ig/list.json
+++ b/js/data/locale/ig/list.json
@@ -16,6 +16,24 @@
             "end": "{0}, na {1}"
         }
     },
+    "or": {
+        "short": {
+            "2": "{0} ma ọ bụ {1}",
+            "end": "{0}, ma ọ bụ {1}"
+        },
+        "medium": {
+            "2": "{0} ma ọ bụ {1}",
+            "end": "{0}, ma ọ bụ {1}"
+        },
+        "long": {
+            "2": "{0} ma ọ bụ {1}",
+            "end": "{0}, ma ọ bụ {1}"
+        },
+        "full": {
+            "2": "{0} ma ọ bụ {1}",
+            "end": "{0}, ma ọ bụ {1}"
+        }
+    },
     "unit": {
         "short": {
             "2": "{0} na {1}",
