--- a/js/data/locale/ig/sysres.json
+++ b/js/data/locale/ig/sysres.json
@@ -53,14 +53,14 @@
     "finalSeparatorFull": ", na ",
     "separatorShort": ", ",
     "separatorMedium": ", ",
-    "1#1 millisecond|#{num} milliseconds": "#{num} ms",
-    "1#1 second|#{num} seconds": "#{num} s",
-    "1#1 minute|#{num} minutes": "#{num} min",
-    "1#1 hour|#{num} hours": "#{num} h",
-    "1#1 day|#{num} days": "#{num} d",
-    "1#1 week|#{num} weeks": "#{num} w",
-    "1#1 month|#{num} months": "#{num} m",
-    "1#1 year|#{num} years": "#{num} y",
+    "1#1 millisecond|#{num} milliseconds": "#{num} millisekọnd",
+    "1#1 second|#{num} seconds": "#{num} sekọnd",
+    "1#1 minute|#{num} minutes": "#{num} Nkeji",
+    "1#1 hour|#{num} hours": "one#{num} elekere|#awa {num}",
+    "1#1 day|#{num} days": "one#{num} ụbọchị|#Ụbọchị {num}",
+    "1#1 week|#{num} weeks": "one#{num} izu|#Izu {num}",
+    "1#1 month|#{num} months": "one#{num} ọnwa|#Ọnwa {num}",
+    "1#1 year|#{num} years": "one#{num} afọ|#Afọ {num}",
     "#{num} ms": "#{num} ms",
     "1#1 sec|#{num} sec": "#{num} s",
     "1#1 min|#{num} min": "#{num} min",
