--- a/js/data/locale/lb/list.json
+++ b/js/data/locale/lb/list.json
@@ -17,6 +17,24 @@
             "end": "{0} a(n) {1}"
         }
     },
+    "or": {
+        "short": {
+            "2": "{0} oder {1}",
+            "end": "{0}, oder {1}"
+        },
+        "medium": {
+            "2": "{0} oder {1}",
+            "end": "{0}, oder {1}"
+        },
+        "long": {
+            "2": "{0} oder {1}",
+            "end": "{0}, oder {1}"
+        },
+        "full": {
+            "2": "{0} oder {1}",
+            "end": "{0}, oder {1}"
+        }
+    },
     "unit": {
         "short": {
             "2": "{0} {1}",
