Add test cases to verify yo-BJ, yo-NG locales

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -5571,6 +5571,7 @@
         "yo": "yo-Latn-NG",
         "yo-Latn": "yo-Latn-NG",
         "yo-NG": "yo-Latn-NG",
+        "yo-BJ": "yo-Latn-BJ",
         "yon": "yon-Latn-ZZ",
         "yon-Latn": "yon-Latn-ZZ",
         "yon-ZZ": "yon-Latn-ZZ",
