--- a/js/data/locale/yo/BJ/unitfmt.json
+++ b/js/data/locale/yo/BJ/unitfmt.json
@@ -8,11 +8,11 @@
             "degree": "#{n}°",
             "arc-minute": "#{n}′",
             "arc-second": "#{n}″",
-            "square-kilometer": "#{n} km²",
-            "hectare": "#{n} ha",
-            "square-meter": "#{n} m²",
-            "square-centimeter": "#{n} cm²",
-            "square-mile": "#{n} mi²",
+            "square-kilometer": "#{n} square-kilometer",
+            "hectare": "#{n} saare",
+            "square-meter": "#{n} square-mita",
+            "square-centimeter": "#{n} square-centimeter",
+            "square-mile": "#{n} square-mile",
             "acre": "#{n} ac",
             "square-yard": "#{n} yd²",
             "square-foot": "#{n} ft²",
@@ -62,7 +62,7 @@
             "calorie": "#{n} cal",
             "kilojoule": "#{n} kJ",
             "joule": "#{n} J",
-            "kilowatt-hour": "#{n} kWh",
+            "kilowatt-hour": "#{n} kilowatt-wakati",
             "electronvolt": "#{n} eV",
             "british-thermal-unit": "#{n} Btu",
             "therm-us": "#{n} US therm",
@@ -80,14 +80,14 @@
             "pixel-per-inch": "#{n} ppi",
             "dot": "#{n} dɔ́ɔ̀tì",
             "earth-radius": "#{n} ìdinwɔ̀n ayé",
-            "kilometer": "#{n} km",
-            "meter": "#{n} m",
-            "decimeter": "#{n} dm",
-            "centimeter": "#{n} cm",
-            "millimeter": "#{n} mm",
-            "micrometer": "#{n} μm",
-            "nanometer": "#{n} nm",
-            "picometer": "#{n} pm",
+            "kilometer": "#{n} kilometer",
+            "meter": "#{n} mita",
+            "decimeter": "#{n} desimeter",
+            "centimeter": "#{n} sẹntimita",
+            "millimeter": "#{n} millimeter",
+            "micrometer": "#{n} micrometer",
+            "nanometer": "#{n} nanometer",
+            "picometer": "#{n} picometer",
             "mile": "#{n} mi",
             "yard": "#{n} yd",
             "foot": "#{n} ft",
@@ -154,12 +154,12 @@
             "cubic-yard": "#{n} yd³",
             "cubic-foot": "#{n} ft³",
             "cubic-inch": "#{n} in³",
-            "megaliter": "#{n} ML",
-            "hectoliter": "#{n} hL",
-            "liter": "#{n} l",
-            "deciliter": "#{n} dL",
-            "centiliter": "#{n} cL",
-            "milliliter": "#{n} mL",
+            "megaliter": "#{n} megaliter",
+            "hectoliter": "#{n} saare",
+            "liter": "#{n} lita",
+            "deciliter": "#{n} deciliter",
+            "centiliter": "#{n} centiliter",
+            "milliliter": "#{n} milimita",
             "pint-metric": "#{n} mpt",
             "cup-metric": "#{n} mc",
             "acre-foot": "#{n} ac ft",
@@ -185,7 +185,7 @@
             "foot-per-second": "#{n} ft/ìsh àáy",
             "kilometer-per-second": "#{n} km/ìsh àáy",
             "mile-per-second": "#{n} mi/ìsh àáy",
-            "kilometer-per-liter": "#{n} km/l",
+            "kilometer-per-liter": "#{n} kilometer-fun-lita",
             "bit-per-second": "#{n} àwɔ́n bíìtì/ìsh àáy",
             "kilobit-per-second": "#{n} àwɔ́n kílóbíìtì/ìsh àáy",
             "megabit-per-second": "#{n} àwɔn mégábíìtì/ìsh àáy",
