update localedata to have persian info and add more test cases

--- a/js/data/locale/ps/sysres.json
+++ b/js/data/locale/ps/sysres.json
@@ -1,4 +1,82 @@
 {
+    "MMMM1-persian": "وری",
+    "MMM1-persian": "وری",
+    "NN1-persian": "ور",
+    "N1-persian": "و",
+    "MMMM2-persian": "غویی",
+    "MMM2-persian": "غویی",
+    "NN2-persian": "غو",
+    "N2-persian": "غ",
+    "MMMM3-persian": "غبرگولی",
+    "MMM3-persian": "غبرگولی",
+    "NN3-persian": "غب",
+    "N3-persian": "غ",
+    "MMMM4-persian": "چنگاښ",
+    "MMM4-persian": "چنگاښ",
+    "NN4-persian": "چن",
+    "N4-persian": "چ",
+    "MMMM5-persian": "زمری",
+    "MMM5-persian": "زمری",
+    "NN5-persian": "زم",
+    "N5-persian": "ز",
+    "MMMM6-persian": "وږی",
+    "MMM6-persian": "وږی",
+    "NN6-persian": "وږ",
+    "N6-persian": "و",
+    "MMMM7-persian": "تله",
+    "MMM7-persian": "تله",
+    "NN7-persian": "تل",
+    "N7-persian": "ت",
+    "MMMM8-persian": "لړم",
+    "MMM8-persian": "لړم",
+    "NN8-persian": "لړ",
+    "N8-persian": "ل",
+    "MMMM9-persian": "لیندۍ",
+    "MMM9-persian": "لیندۍ",
+    "NN9-persian": "لی",
+    "N9-persian": "ل",
+    "MMMM10-persian": "مرغومی",
+    "MMM10-persian": "مرغومی",
+    "NN10-persian": "مر",
+    "N10-persian": "م",
+    "MMMM11-persian": "سلواغه",
+    "MMM11-persian": "سلواغه",
+    "NN11-persian": "سل",
+    "N11-persian": "س",
+    "MMMM12-persian": "کب",
+    "MMM12-persian": "کب",
+    "NN12-persian": "کب",
+    "N12-persian": "ک",
+    "EEEE0-persian": "يونۍ",
+    "EEE0-persian": "يونۍ",
+    "EE0-persian": "يونۍ",
+    "E0-persian": "S",
+    "EEEE1-persian": "دونۍ",
+    "EEE1-persian": "دونۍ",
+    "EE1-persian": "دونۍ",
+    "E1-persian": "M",
+    "EEEE2-persian": "درېنۍ",
+    "EEE2-persian": "درېنۍ",
+    "EE2-persian": "درېنۍ",
+    "E2-persian": "T",
+    "EEEE3-persian": "څلرنۍ",
+    "EEE3-persian": "څلرنۍ",
+    "EE3-persian": "څلرنۍ",
+    "E3-persian": "W",
+    "EEEE4-persian": "پينځنۍ",
+    "EEE4-persian": "پينځنۍ",
+    "EE4-persian": "پينځنۍ",
+    "E4-persian": "T",
+    "EEEE5-persian": "جمعه",
+    "EEE5-persian": "جمعه",
+    "EE5-persian": "جمعه",
+    "E5-persian": "F",
+    "EEEE6-persian": "اونۍ",
+    "EEE6-persian": "اونۍ",
+    "EE6-persian": "اونۍ",
+    "E6-persian": "S",
+    "a0-persian": "غ.م.",
+    "a1-persian": "غ.و.",
     "MMMM1": "جنوري",
     "MMM1": "جنوري",
     "NN1": "جن",
@@ -47,32 +125,6 @@
     "MMM12": "دسمبر",
     "NN12": "دس",
     "N12": "د",
-    "EEEE0": "يونۍ",
-    "EEE0": "يونۍ",
-    "EE0": "يونۍ",
-    "EEEE1": "دونۍ",
-    "EEE1": "دونۍ",
-    "EE1": "دونۍ",
-    "EEEE2": "درېنۍ",
-    "EEE2": "درېنۍ",
-    "EE2": "درېنۍ",
-    "EEEE3": "څلرنۍ",
-    "EEE3": "څلرنۍ",
-    "EE3": "څلرنۍ",
-    "EEEE4": "پينځنۍ",
-    "EEE4": "پينځنۍ",
-    "EE4": "پينځنۍ",
-    "EEEE5": "جمعه",
-    "EEE5": "جمعه",
-    "EE5": "جمعه",
-    "EEEE6": "اونۍ",
-    "EEE6": "اونۍ",
-    "EE6": "اونۍ",
-    "a0": "غ.م.",
-    "a1": "غ.و.",
-    "G1": "ع.پ",
-    "finalSeparatorFull": ", ",
-    "separatorMedium": ", ",
     "LLLL1": "جنوري",
     "LLL1": "جنوري",
     "LL1": "جن",
@@ -121,6 +173,38 @@
     "LLL12": "دسمبر",
     "LL12": "دس",
     "L12": "12",
+    "EEEE0": "يونۍ",
+    "EEE0": "يونۍ",
+    "EE0": "يونۍ",
+    "E0": "S",
+    "EEEE1": "دونۍ",
+    "EEE1": "دونۍ",
+    "EE1": "دونۍ",
+    "E1": "M",
+    "EEEE2": "درېنۍ",
+    "EEE2": "درېنۍ",
+    "EE2": "درېنۍ",
+    "E2": "T",
+    "EEEE3": "څلرنۍ",
+    "EEE3": "څلرنۍ",
+    "EE3": "څلرنۍ",
+    "E3": "W",
+    "EEEE4": "پينځنۍ",
+    "EEE4": "پينځنۍ",
+    "EE4": "پينځنۍ",
+    "E4": "T",
+    "EEEE5": "جمعه",
+    "EEE5": "جمعه",
+    "EE5": "جمعه",
+    "E5": "F",
+    "EEEE6": "اونۍ",
+    "EEE6": "اونۍ",
+    "EE6": "اونۍ",
+    "E6": "S",
+    "a0": "غ.م.",
+    "a1": "غ.و.",
+    "G-1": "BCE",
+    "G1": "ع.پ",
     "1#1 millisecond|#{num} milliseconds": "one#{num} ms|#{num} ms",
     "1#1 second|#{num} seconds": "one#{num} s|#{num} s",
     "1#1 minute|#{num} minutes": "one#{num} min|#{num} min",
@@ -195,7 +279,12 @@
     "#{num}w ago": "one#‏{num} اونۍ مخکې|#‏{num} اونۍ مخکې",
     "#{num}mo ago": "one#‏{num} مياشت مخکې|#‏{num} مياشت مخکې",
     "#{num}y ago": "one#‏{num} کال مخکې|#‏{num} کاله مخکې",
+    "separatorFull": ", ",
+    "finalSeparatorFull": ", ",
+    "separatorLong": ", ",
     "finalSeparatorLong": ", ",
+    "separatorMedium": ", ",
     "finalSeparatorMedium": ", ",
+    "separatorShort": " ",
     "finalSeparatorShort": " "
 }
