--- a/js/data/locale/ps/PK/dateformats.json
+++ b/js/data/locale/ps/PK/dateformats.json
@@ -2,22 +2,22 @@
     "gregorian": {
         "time": {
             "12": {
-                "ahmsz": "‏h:mm:ss a z",
-                "hmsz": "‏h:mm:ss z",
+                "hmz": "‏h:mm z",
                 "ahmz": "‏h:mm a z",
-                "hmz": "‏h:mm z"
+                "hmsz": "‏h:mm:ss z",
+                "ahmsz": "‏h:mm:ss a z"
             },
             "24": {
-                "ahmsz": "‏HH:mm:ss z",
-                "ahms": "‏HH:mm:ss",
-                "hmsz": "‏HH:mm:ss z",
-                "hms": "‏HH:mm:ss",
-                "ahmz": "‏HH:mm z",
-                "ahm": "‏HH:mm",
-                "hmz": "‏HH:mm z",
+                "h": "HH",
                 "ah": "‏HH",
                 "hm": "‏HH:mm",
-                "h": "HH"
+                "ahm": "‏HH:mm",
+                "hms": "‏HH:mm:ss",
+                "hmz": "‏HH:mm z",
+                "ahmz": "‏HH:mm z",
+                "ahms": "‏HH:mm:ss",
+                "hmsz": "‏HH:mm:ss z",
+                "ahmsz": "‏HH:mm:ss z"
             }
         }
     }
