--- a/js/data/locale/ps/dateformats.json
+++ b/js/data/locale/ps/dateformats.json
@@ -1,38 +1,48 @@
 {
-    "gregorian": {
+    "persian": {
+        "order": "{date} {time}",
         "date": {
             "dmwy": {
-                "s": "E yyyy/M/d",
-                "m": "EE yyyy MMM d",
+                "f": "EEEE د yyyy د MMMM d",
                 "l": "EEE د yyyy د MMMM d",
-                "f": "EEEE د yyyy د MMMM d"
+                "m": "EE  yyyy MMM d",
+                "s": "E  yyyy/M/d"
             },
             "dmy": {
-                "s": "‏yyyy/M/d",
-                "m": "‏yyyy MMM d",
+                "f": "د yyyy د MMMM d",
                 "l": "د yyyy د MMMM d",
-                "f": "د yyyy د MMMM d"
+                "m": " yyyy MMM d",
+                "s": " yyyy/M/d"
             },
             "dmw": {
-                "s": "E ‏M/d",
-                "m": "EE MMM d",
+                "f": "EEEE MMMM d",
                 "l": "EEE MMMM d",
-                "f": "EEEE MMMM d"
+                "m": "EE MMM d",
+                "s": "E ‏M/d"
             },
             "dm": {
-                "s": "‏M/d",
-                "m": "MMM d",
+                "f": "MMMM d",
                 "l": "MMMM d",
-                "f": "MMMM d"
+                "m": "MMM d",
+                "s": "‏M/d"
             },
             "my": {
-                "s": "‏yyyy/M",
-                "m": "‏yyyy MMM",
+                "f": "د yyyy د MMMM",
                 "l": "د yyyy د MMMM",
-                "f": "د yyyy د MMMM"
+                "m": " yyyy MMM",
+                "s": " yyyy/M"
             },
             "dw": {
+                "f": "EEEE d",
+                "l": "EEE d",
+                "m": "EE d",
                 "s": "E d"
+            },
+            "w": {
+                "f": "EEEE",
+                "l": "EEE",
+                "m": "EE",
+                "s": "E"
             },
             "d": {
                 "f": "d",
@@ -41,10 +51,168 @@
                 "s": "d"
             },
             "m": {
+                "f": "MMMM",
+                "l": "MMMM",
                 "m": "MMM",
-                "l": "MMMM"
+                "s": "M"
             },
             "y": {
+                "f": "yyyy",
+                "l": "yyyy",
+                "m": "yyyy",
+                "s": "yyyy"
+            }
+        },
+        "time": {
+            "12": {
+                "h": "h",
+                "m": "mm",
+                "s": "ss",
+                "ah": "‏h a",
+                "hm": "‏h:mm",
+                "ms": "mm:ss",
+                "ahm": "‏h:mm a",
+                "hms": "‏h:mm:ss",
+                "hmz": "‏h:mm (z)",
+                "ahmz": "‏h:mm a (z)",
+                "ahms": "‏h:mm:ss a",
+                "hmsz": "‏h:mm:ss (z)",
+                "ahmsz": "‏h:mm:ss a (z)"
+            },
+            "24": {
+                "h": "H",
+                "m": "mm",
+                "s": "ss",
+                "ah": "‏H",
+                "hm": "‏H:mm",
+                "ms": "mm:ss",
+                "ahm": "‏H:mm",
+                "hms": "‏H:mm:ss",
+                "hmz": "‏H:mm (z)",
+                "ahmz": "‏H:mm (z)",
+                "ahms": "‏H:mm:ss",
+                "hmsz": "‏H:mm:ss (z)",
+                "ahmsz": "‏H:mm:ss (z)"
+            }
+        },
+        "range": {
+            "c00": {
+                "f": "د {sy} د {sm} {sd} {st} – {et}",
+                "l": "د {sy} د {sm} {sd} {st} – {et}",
+                "m": " {sy} {sm} {sd} {st} – {et}",
+                "s": " {sy}/{sm}/{sd} {st} – {et}"
+            },
+            "c01": {
+                "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
+                "l": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
+                "m": " {sy} {sm} {sd} {st} – {ey} {em} {ed} {et}",
+                "s": " {sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}"
+            },
+            "c02": {
+                "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
+                "l": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
+                "m": " {sy} {sm} {sd} {st} – {ey} {em} {ed} {et}",
+                "s": " {sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}"
+            },
+            "c03": {
+                "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
+                "l": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
+                "m": " {sy} {sm} {sd} {st} – {ey} {em} {ed} {et}",
+                "s": " {sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}"
+            },
+            "c10": {
+                "f": "د {sy} د {sm} {sd} – {ed}",
+                "l": "د {sy} د {sm} {sd} – {ed}",
+                "m": " {sy} {sm} {sd} – {ed}",
+                "s": " {sy}/{sm}/{sd} – {ed}"
+            },
+            "c11": {
+                "f": "د {sy} د {sm} {sd} – د {em} {ed}",
+                "l": "د {sy} د {sm} {sd} – د {em} {ed}",
+                "m": " {sy} {sm} {sd} – {ey} {em} {ed}",
+                "s": " {sy}/{sm}/{sd} – {ey}/{em}/{ed}"
+            },
+            "c12": {
+                "f": "د {sy} د {sm} {sd} – د {ey} د {em} {ed}",
+                "l": "د {sy} د {sm} {sd} – د {ey} د {em} {ed}",
+                "m": " {sy} {sm} {sd} – {ey} {em} {ed}",
+                "s": " {sy}/{sm}/{sd} – {ey}/{em}/{ed}"
+            },
+            "c20": {
+                "f": "د {sy} د {sm} – د {ey} د {em}",
+                "l": "د {sy} د {sm} – د {ey} د {em}",
+                "m": "{sy} {sm} – {ey} {em}",
+                "s": "{sy}/{sm} – {ey}/{em}"
+            },
+            "c30": {
+                "f": "‏{sy} – {ey}",
+                "l": "‏{sy} – {ey}",
+                "m": "‏{sy} – {ey}",
+                "s": "‏{sy} – {ey}"
+            }
+        }
+    },
+    "gregorian": {
+        "order": "{date} {time}",
+        "date": {
+            "dmwy": {
+                "f": "EEEE د yyyy د MMMM d",
+                "l": "EEE د yyyy د MMMM d",
+                "m": "EE yyyy MMM d",
+                "s": "E yyyy/M/d"
+            },
+            "dmy": {
+                "f": "د yyyy د MMMM d",
+                "l": "د yyyy د MMMM d",
+                "m": "‏yyyy MMM d",
+                "s": "‏yyyy/M/d"
+            },
+            "dmw": {
+                "f": "EEEE MMMM d",
+                "l": "EEE MMMM d",
+                "m": "EE MMM d",
+                "s": "E ‏M/d"
+            },
+            "dm": {
+                "f": "MMMM d",
+                "l": "MMMM d",
+                "m": "MMM d",
+                "s": "‏M/d"
+            },
+            "my": {
+                "f": "د yyyy د MMMM",
+                "l": "د yyyy د MMMM",
+                "m": "‏yyyy MMM",
+                "s": "‏yyyy/M"
+            },
+            "dw": {
+                "f": "EEEE d",
+                "l": "EEE d",
+                "m": "EE d",
+                "s": "E d"
+            },
+            "w": {
+                "f": "EEEE",
+                "l": "EEE",
+                "m": "EE",
+                "s": "E"
+            },
+            "d": {
+                "f": "d",
+                "l": "d",
+                "m": "d",
+                "s": "d"
+            },
+            "m": {
+                "f": "MMMM",
+                "l": "MMMM",
+                "m": "MMM",
+                "s": "M"
+            },
+            "y": {
+                "f": "yyyy",
+                "l": "yyyy",
+                "m": "yyyy",
                 "s": "yyyy"
             },
             "l": {
@@ -56,76 +224,84 @@
         },
         "time": {
             "12": {
-                "ahmsz": "‏h:mm:ss a (z)",
+                "h": "h",
+                "m": "mm",
+                "s": "ss",
+                "ah": "‏h a",
+                "hm": "‏h:mm",
+                "ms": "mm:ss",
+                "ahm": "‏h:mm a",
+                "hms": "‏h:mm:ss",
+                "hmz": "‏h:mm (z)",
+                "ahmz": "‏h:mm a (z)",
                 "ahms": "‏h:mm:ss a",
                 "hmsz": "‏h:mm:ss (z)",
-                "hms": "‏h:mm:ss",
-                "ahmz": "‏h:mm a (z)",
-                "ahm": "‏h:mm a",
-                "hmz": "‏h:mm (z)",
-                "ah": "‏h a",
-                "hm": "‏h:mm"
+                "ahmsz": "‏h:mm:ss a (z)"
             },
             "24": {
-                "ahmsz": "‏H:mm:ss (z)",
+                "h": "H",
+                "m": "mm",
+                "s": "ss",
+                "ah": "‏H",
+                "hm": "‏H:mm",
+                "ms": "mm:ss",
+                "ahm": "‏H:mm",
+                "hms": "‏H:mm:ss",
+                "hmz": "‏H:mm (z)",
+                "ahmz": "‏H:mm (z)",
                 "ahms": "‏H:mm:ss",
                 "hmsz": "‏H:mm:ss (z)",
-                "hms": "‏H:mm:ss",
-                "ahmz": "‏H:mm (z)",
-                "ahm": "‏H:mm",
-                "hmz": "‏H:mm (z)",
-                "ah": "‏H",
-                "hm": "‏H:mm"
+                "ahmsz": "‏H:mm:ss (z)"
             }
         },
         "range": {
             "c00": {
-                "s": "‏{sy}/{sm}/{sd} {st} – {et}",
-                "m": "‏{sy} {sm} {sd} {st} – {et}",
+                "f": "د {sy} د {sm} {sd} {st} – {et}",
                 "l": "د {sy} د {sm} {sd} {st} – {et}",
-                "f": "د {sy} د {sm} {sd} {st} – {et}"
+                "m": "‏{sy} {sm} {sd} {st} – {et}",
+                "s": "‏{sy}/{sm}/{sd} {st} – {et}"
             },
             "c01": {
-                "s": "‏{sy}/{sm}/{sd} {st} – ‏{ey}/{em}/{ed} {et}",
-                "m": "‏{sy} {sm} {sd} {st} – ‏{ey} {em} {ed} {et}",
+                "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
                 "l": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
-                "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}"
+                "m": "‏{sy} {sm} {sd} {st} – ‏{ey} {em} {ed} {et}",
+                "s": "‏{sy}/{sm}/{sd} {st} – ‏{ey}/{em}/{ed} {et}"
             },
             "c02": {
-                "s": "‏{sy}/{sm}/{sd} {st} – ‏{ey}/{em}/{ed} {et}",
-                "m": "‏{sy} {sm} {sd} {st} – ‏{ey} {em} {ed} {et}",
+                "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
                 "l": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
-                "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}"
+                "m": "‏{sy} {sm} {sd} {st} – ‏{ey} {em} {ed} {et}",
+                "s": "‏{sy}/{sm}/{sd} {st} – ‏{ey}/{em}/{ed} {et}"
             },
             "c03": {
-                "s": "‏{sy}/{sm}/{sd} {st} – ‏{ey}/{em}/{ed} {et}",
-                "m": "‏{sy} {sm} {sd} {st} – ‏{ey} {em} {ed} {et}",
+                "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
                 "l": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
-                "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}"
+                "m": "‏{sy} {sm} {sd} {st} – ‏{ey} {em} {ed} {et}",
+                "s": "‏{sy}/{sm}/{sd} {st} – ‏{ey}/{em}/{ed} {et}"
             },
             "c10": {
-                "s": "‏{sy}/{sm}/{sd} – {ed}",
-                "m": "‏{sy} {sm} {sd} – {ed}",
+                "f": "د {sy} د {sm} {sd} – {ed}",
                 "l": "د {sy} د {sm} {sd} – {ed}",
-                "f": "د {sy} د {sm} {sd} – {ed}"
+                "m": "‏{sy} {sm} {sd} – {ed}",
+                "s": "‏{sy}/{sm}/{sd} – {ed}"
             },
             "c11": {
-                "s": "‏{sy}/{sm}/{sd} – ‏{ey}/{em}/{ed}",
-                "m": "‏{sy} {sm} {sd} – ‏{ey} {em} {ed}",
+                "f": "د {sy} د {sm} {sd} – د {em} {ed}",
                 "l": "د {sy} د {sm} {sd} – د {em} {ed}",
-                "f": "د {sy} د {sm} {sd} – د {em} {ed}"
+                "m": "‏{sy} {sm} {sd} – ‏{ey} {em} {ed}",
+                "s": "‏{sy}/{sm}/{sd} – ‏{ey}/{em}/{ed}"
             },
             "c12": {
-                "s": "‏{sy}/{sm}/{sd} – ‏{ey}/{em}/{ed}",
-                "m": "‏{sy} {sm} {sd} – ‏{ey} {em} {ed}",
+                "f": "د {sy} د {sm} {sd} – د {ey} د {em} {ed}",
                 "l": "د {sy} د {sm} {sd} – د {ey} د {em} {ed}",
-                "f": "د {sy} د {sm} {sd} – د {ey} د {em} {ed}"
+                "m": "‏{sy} {sm} {sd} – ‏{ey} {em} {ed}",
+                "s": "‏{sy}/{sm}/{sd} – ‏{ey}/{em}/{ed}"
             },
             "c20": {
-                "s": "‏{sy}/{sm} – ‏{ey}/{em}",
-                "m": "‏{sy} {sm} – ‏{ey} {em}",
+                "f": "د {sy} د {sm} – د {ey} د {em}",
                 "l": "د {sy} د {sm} – د {ey} د {em}",
-                "f": "د {sy} د {sm} – د {ey} د {em}"
+                "m": "‏{sy} {sm} – ‏{ey} {em}",
+                "s": "‏{sy}/{sm} – ‏{ey}/{em}"
             },
             "c30": {
                 "f": "‏{sy} – {ey}",
