--- a/js/data/locale/ps/dateformats.json
+++ b/js/data/locale/ps/dateformats.json
@@ -5,14 +5,14 @@
             "dmwy": {
                 "f": "EEEE د yyyy د MMMM d",
                 "l": "EEE د yyyy د MMMM d",
-                "m": "EE  yyyy MMM d",
-                "s": "E  yyyy/M/d"
+                "m": "EE yyyy MMM d",
+                "s": "E yyyy/M/d"
             },
             "dmy": {
                 "f": "د yyyy د MMMM d",
                 "l": "د yyyy د MMMM d",
-                "m": " yyyy MMM d",
-                "s": " yyyy/M/d"
+                "m": "‏yyyy MMM d",
+                "s": "‏yyyy/M/d"
             },
             "dmw": {
                 "f": "EEEE MMMM d",
@@ -29,8 +29,8 @@
             "my": {
                 "f": "د yyyy د MMMM",
                 "l": "د yyyy د MMMM",
-                "m": " yyyy MMM",
-                "s": " yyyy/M"
+                "m": "‏yyyy MMM",
+                "s": "‏yyyy/M"
             },
             "dw": {
                 "f": "EEEE d",
@@ -99,50 +99,50 @@
             "c00": {
                 "f": "د {sy} د {sm} {sd} {st} – {et}",
                 "l": "د {sy} د {sm} {sd} {st} – {et}",
-                "m": " {sy} {sm} {sd} {st} – {et}",
-                "s": " {sy}/{sm}/{sd} {st} – {et}"
+                "m": "‏{sy} {sm} {sd} {st} – {et}",
+                "s": "‏{sy}/{sm}/{sd} {st} – {et}"
             },
             "c01": {
                 "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
                 "l": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
-                "m": " {sy} {sm} {sd} {st} – {ey} {em} {ed} {et}",
-                "s": " {sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}"
+                "m": "‏{sy} {sm} {sd} {st} – ‏{ey} {em} {ed} {et}",
+                "s": "‏{sy}/{sm}/{sd} {st} – ‏{ey}/{em}/{ed} {et}"
             },
             "c02": {
                 "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
                 "l": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
-                "m": " {sy} {sm} {sd} {st} – {ey} {em} {ed} {et}",
-                "s": " {sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}"
+                "m": "‏{sy} {sm} {sd} {st} – ‏{ey} {em} {ed} {et}",
+                "s": "‏{sy}/{sm}/{sd} {st} – ‏{ey}/{em}/{ed} {et}"
             },
             "c03": {
                 "f": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
                 "l": "د {sy} د {sm} {sd} {st} – د {ey} د {em} {ed} {et}",
-                "m": " {sy} {sm} {sd} {st} – {ey} {em} {ed} {et}",
-                "s": " {sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}"
+                "m": "‏{sy} {sm} {sd} {st} – ‏{ey} {em} {ed} {et}",
+                "s": "‏{sy}/{sm}/{sd} {st} – ‏{ey}/{em}/{ed} {et}"
             },
             "c10": {
                 "f": "د {sy} د {sm} {sd} – {ed}",
                 "l": "د {sy} د {sm} {sd} – {ed}",
-                "m": " {sy} {sm} {sd} – {ed}",
-                "s": " {sy}/{sm}/{sd} – {ed}"
+                "m": "‏{sy} {sm} {sd} – {ed}",
+                "s": "‏{sy}/{sm}/{sd} – {ed}"
             },
             "c11": {
                 "f": "د {sy} د {sm} {sd} – د {em} {ed}",
                 "l": "د {sy} د {sm} {sd} – د {em} {ed}",
-                "m": " {sy} {sm} {sd} – {ey} {em} {ed}",
-                "s": " {sy}/{sm}/{sd} – {ey}/{em}/{ed}"
+                "m": "‏{sy} {sm} {sd} – ‏{ey} {em} {ed}",
+                "s": "‏{sy}/{sm}/{sd} – ‏{ey}/{em}/{ed}"
             },
             "c12": {
                 "f": "د {sy} د {sm} {sd} – د {ey} د {em} {ed}",
                 "l": "د {sy} د {sm} {sd} – د {ey} د {em} {ed}",
-                "m": " {sy} {sm} {sd} – {ey} {em} {ed}",
-                "s": " {sy}/{sm}/{sd} – {ey}/{em}/{ed}"
+                "m": "‏{sy} {sm} {sd} – ‏{ey} {em} {ed}",
+                "s": "‏{sy}/{sm}/{sd} – ‏{ey}/{em}/{ed}"
             },
             "c20": {
                 "f": "د {sy} د {sm} – د {ey} د {em}",
                 "l": "د {sy} د {sm} – د {ey} د {em}",
-                "m": "{sy} {sm} – {ey} {em}",
-                "s": "{sy}/{sm} – {ey}/{em}"
+                "m": "‏{sy} {sm} – ‏{ey} {em}",
+                "s": "‏{sy}/{sm} – ‏{ey}/{em}"
             },
             "c30": {
                 "f": "‏{sy} – {ey}",
