Apply review comments

--- a/js/data/locale/yo/unitfmt.json
+++ b/js/data/locale/yo/unitfmt.json
@@ -8,10 +8,10 @@
             "degree": "#{n}°",
             "arc-minute": "#{n}′",
             "arc-second": "#{n}″",
-            "square-kilometer": "#{n} square-kilometer",
+            "square-kilometer": "#{n} km²",
             "hectare": "#{n} saare",
             "square-meter": "#{n} square-mita",
-            "square-centimeter": "#{n} square-centimeter",
+            "square-centimeter": "#{n} cm²",
             "square-mile": "#{n} square-mile",
             "acre": "#{n} ac",
             "square-yard": "#{n} yd²",
