--- a/js/data/locale/ig/sysres.json
+++ b/js/data/locale/ig/sysres.json
@@ -20,35 +20,35 @@
     "#{num}y": "#{num} y",
     "#{num}y ago": "#-{num} y",
     "1#1 day ago|#{num} days ago": "#-{num} d",
-    "1#1 day|#{num} days": "#{num} d",
+    "1#1 day|#{num} days": "one#{num} ụbọchị|#Ụbọchị {num}",
     "1#1 dy ago|#{num} dys ago": "#-{num} d",
     "1#1 dy|#{num} dys": "#{num} d",
     "1#1 hour ago|#{num} hours ago": "#-{num} h",
-    "1#1 hour|#{num} hours": "#{num} h",
+    "1#1 hour|#{num} hours": "one#{num} elekere|#awa {num}",
     "1#1 hr ago|#{num} hrs ago": "#-{num} h",
     "1#1 hr|#{num} hrs": "#{num} h",
-    "1#1 millisecond|#{num} milliseconds": "#{num} ms",
+    "1#1 millisecond|#{num} milliseconds": "#{num} millisekọnd",
     "1#1 min ago|#{num} min ago": "#-{num} min",
     "1#1 minute ago|#{num} minutes ago": "#-{num} min",
-    "1#1 minute|#{num} minutes": "#{num} min",
+    "1#1 minute|#{num} minutes": "#{num} Nkeji",
     "1#1 min|#{num} min": "#{num} min",
     "1#1 mi|#{num} min": "#{num} min",
     "1#1 mon ago|#{num} mons ago": "#-{num} m",
     "1#1 month ago|#{num} months ago": "#-{num} m",
-    "1#1 month|#{num} months": "#{num} m",
+    "1#1 month|#{num} months": "one#{num} ọnwa|#Ọnwa {num}",
     "1#1 mon|#{num} mons": "#{num} m",
     "1#1 mo|#{num} mos": "#{num} m",
     "1#1 sec ago|#{num} sec ago": "#-{num} s",
     "1#1 second ago|#{num} seconds ago": "#-{num} s",
-    "1#1 second|#{num} seconds": "#{num} s",
+    "1#1 second|#{num} seconds": "#{num} sekọnd",
     "1#1 sec|#{num} sec": "#{num} s",
     "1#1 se|#{num} sec": "#{num} s",
     "1#1 week ago|#{num} weeks ago": "#-{num} w",
-    "1#1 week|#{num} weeks": "#{num} w",
+    "1#1 week|#{num} weeks": "one#{num} izu|#Izu {num}",
     "1#1 wk ago|#{num} wks ago": "#-{num} w",
     "1#1 wk|#{num} wks": "#{num} w",
     "1#1 year ago|#{num} years ago": "#-{num} y",
-    "1#1 year|#{num} years": "#{num} y",
+    "1#1 year|#{num} years": "one#{num} afọ|#Afọ {num}",
     "1#1 yr ago|#{num} yrs ago": "#-{num} y",
     "1#1 yr|#{num} yrs": "#{num} y",
     "1#in 1 day|#in {num} days": "#+{num} d",
