Add hardCodeData for E# and E#-persian

--- a/js/data/locale/ps/sysres.json
+++ b/js/data/locale/ps/sysres.json
@@ -50,31 +50,31 @@
     "EEEE0-persian": "يونۍ",
     "EEE0-persian": "يونۍ",
     "EE0-persian": "يونۍ",
-    "E0-persian": "S",
+    "E0-persian": "ﯼ",
     "EEEE1-persian": "دونۍ",
     "EEE1-persian": "دونۍ",
     "EE1-persian": "دونۍ",
-    "E1-persian": "M",
+    "E1-persian": "ﺩ",
     "EEEE2-persian": "درېنۍ",
     "EEE2-persian": "درېنۍ",
     "EE2-persian": "درېنۍ",
-    "E2-persian": "T",
+    "E2-persian": "ﺱ",
     "EEEE3-persian": "څلرنۍ",
     "EEE3-persian": "څلرنۍ",
     "EE3-persian": "څلرنۍ",
-    "E3-persian": "W",
+    "E3-persian": "ﭺ",
     "EEEE4-persian": "پينځنۍ",
     "EEE4-persian": "پينځنۍ",
     "EE4-persian": "پينځنۍ",
-    "E4-persian": "T",
+    "E4-persian": "ﭖ",
     "EEEE5-persian": "جمعه",
     "EEE5-persian": "جمعه",
     "EE5-persian": "جمعه",
-    "E5-persian": "F",
+    "E5-persian": "ﺝ",
     "EEEE6-persian": "اونۍ",
     "EEE6-persian": "اونۍ",
     "EE6-persian": "اونۍ",
-    "E6-persian": "S",
+    "E6-persian": "ﺵ",
     "a0-persian": "غ.م.",
     "a1-persian": "غ.و.",
     "MMMM1": "جنوري",
@@ -176,31 +176,31 @@
     "EEEE0": "يونۍ",
     "EEE0": "يونۍ",
     "EE0": "يونۍ",
-    "E0": "S",
+    "E0": "ﺡ",
     "EEEE1": "دونۍ",
     "EEE1": "دونۍ",
     "EE1": "دونۍ",
-    "E1": "M",
+    "E1": "ﻥ",
     "EEEE2": "درېنۍ",
     "EEE2": "درېنۍ",
     "EE2": "درېنۍ",
-    "E2": "T",
+    "E2": "ﺙ",
     "EEEE3": "څلرنۍ",
     "EEE3": "څلرنۍ",
     "EE3": "څلرنۍ",
-    "E3": "W",
+    "E3": "ﺭ",
     "EEEE4": "پينځنۍ",
     "EEE4": "پينځنۍ",
     "EE4": "پينځنۍ",
-    "E4": "T",
+    "E4": "ﺥ",
     "EEEE5": "جمعه",
     "EEE5": "جمعه",
     "EE5": "جمعه",
-    "E5": "F",
+    "E5": "ﺝ",
     "EEEE6": "اونۍ",
     "EEE6": "اونۍ",
     "EE6": "اونۍ",
-    "E6": "S",
+    "E6": "ﺱ",
     "a0": "غ.م.",
     "a1": "غ.و.",
     "G-1": "BCE",
