--- a/js/data/locale/ps/sysres.json
+++ b/js/data/locale/ps/sysres.json
@@ -66,33 +66,61 @@
     "1#in 1 year|#in {num} years": "one#‏په {num} کال کې|#‏په {num} کالونو کې",
     "1#in 1 yr|#in {num} yrs": "one#‏په {num} کال کې|#‏په {num} کالونو کې",
     "E0": "S",
+    "E0-persian": "S",
     "E1": "M",
+    "E1-persian": "M",
     "E2": "T",
+    "E2-persian": "T",
     "E3": "W",
+    "E3-persian": "W",
     "E4": "T",
+    "E4-persian": "T",
     "E5": "F",
+    "E5-persian": "F",
     "E6": "S",
+    "E6-persian": "S",
     "EE0": "يونۍ",
+    "EE0-persian": "يونۍ",
     "EE1": "دونۍ",
+    "EE1-persian": "دونۍ",
     "EE2": "درېنۍ",
+    "EE2-persian": "درېنۍ",
     "EE3": "څلرنۍ",
+    "EE3-persian": "څلرنۍ",
     "EE4": "پينځنۍ",
+    "EE4-persian": "پينځنۍ",
     "EE5": "جمعه",
+    "EE5-persian": "جمعه",
     "EE6": "اونۍ",
+    "EE6-persian": "اونۍ",
     "EEE0": "يونۍ",
+    "EEE0-persian": "يونۍ",
     "EEE1": "دونۍ",
+    "EEE1-persian": "دونۍ",
     "EEE2": "درېنۍ",
+    "EEE2-persian": "درېنۍ",
     "EEE3": "څلرنۍ",
+    "EEE3-persian": "څلرنۍ",
     "EEE4": "پينځنۍ",
+    "EEE4-persian": "پينځنۍ",
     "EEE5": "جمعه",
+    "EEE5-persian": "جمعه",
     "EEE6": "اونۍ",
+    "EEE6-persian": "اونۍ",
     "EEEE0": "يونۍ",
+    "EEEE0-persian": "يونۍ",
     "EEEE1": "دونۍ",
+    "EEEE1-persian": "دونۍ",
     "EEEE2": "درېنۍ",
+    "EEEE2-persian": "درېنۍ",
     "EEEE3": "څلرنۍ",
+    "EEEE3-persian": "څلرنۍ",
     "EEEE4": "پينځنۍ",
+    "EEEE4-persian": "پينځنۍ",
     "EEEE5": "جمعه",
+    "EEEE5-persian": "جمعه",
     "EEEE6": "اونۍ",
+    "EEEE6-persian": "اونۍ",
     "G-1": "BCE",
     "G1": "ع.پ",
     "L1": "1",
@@ -144,55 +172,105 @@
     "LLLL8": "اګست",
     "LLLL9": "سپتمبر",
     "MMM1": "جنوري",
+    "MMM1-persian": "وری",
     "MMM10": "اکتوبر",
+    "MMM10-persian": "مرغومی",
     "MMM11": "نومبر",
+    "MMM11-persian": "سلواغه",
     "MMM12": "دسمبر",
+    "MMM12-persian": "کب",
     "MMM2": "فبروري",
+    "MMM2-persian": "غویی",
     "MMM3": "مارچ",
+    "MMM3-persian": "غبرگولی",
     "MMM4": "اپریل",
+    "MMM4-persian": "چنگاښ",
     "MMM5": "مۍ",
+    "MMM5-persian": "زمری",
     "MMM6": "جون",
+    "MMM6-persian": "وږی",
     "MMM7": "جولای",
+    "MMM7-persian": "تله",
     "MMM8": "اګست",
+    "MMM8-persian": "لړم",
     "MMM9": "سېپتمبر",
+    "MMM9-persian": "لیندۍ",
     "MMMM1": "جنوري",
+    "MMMM1-persian": "وری",
     "MMMM10": "اکتوبر",
+    "MMMM10-persian": "مرغومی",
     "MMMM11": "نومبر",
+    "MMMM11-persian": "سلواغه",
     "MMMM12": "دسمبر",
+    "MMMM12-persian": "کب",
     "MMMM2": "فبروري",
+    "MMMM2-persian": "غویی",
     "MMMM3": "مارچ",
+    "MMMM3-persian": "غبرگولی",
     "MMMM4": "اپریل",
+    "MMMM4-persian": "چنگاښ",
     "MMMM5": "مۍ",
+    "MMMM5-persian": "زمری",
     "MMMM6": "جون",
+    "MMMM6-persian": "وږی",
     "MMMM7": "جولای",
+    "MMMM7-persian": "تله",
     "MMMM8": "اګست",
+    "MMMM8-persian": "لړم",
     "MMMM9": "سېپتمبر",
+    "MMMM9-persian": "لیندۍ",
     "N1": "ج",
+    "N1-persian": "و",
     "N10": "ا",
+    "N10-persian": "م",
     "N11": "ن",
+    "N11-persian": "س",
     "N12": "د",
+    "N12-persian": "ک",
     "N2": "ف",
+    "N2-persian": "غ",
     "N3": "م",
+    "N3-persian": "غ",
     "N4": "ا",
+    "N4-persian": "چ",
     "N5": "م",
+    "N5-persian": "ز",
     "N6": "ج",
+    "N6-persian": "و",
     "N7": "ج",
+    "N7-persian": "ت",
     "N8": "ا",
+    "N8-persian": "ل",
     "N9": "س",
+    "N9-persian": "ل",
     "NN1": "جن",
+    "NN1-persian": "ور",
     "NN10": "اک",
+    "NN10-persian": "مر",
     "NN11": "نو",
+    "NN11-persian": "سل",
     "NN12": "دس",
+    "NN12-persian": "کب",
     "NN2": "فب",
+    "NN2-persian": "غو",
     "NN3": "ما",
+    "NN3-persian": "غب",
     "NN4": "اپ",
+    "NN4-persian": "چن",
     "NN5": "مۍ",
+    "NN5-persian": "زم",
     "NN6": "جو",
+    "NN6-persian": "وږ",
     "NN7": "جو",
+    "NN7-persian": "تل",
     "NN8": "اګ",
+    "NN8-persian": "لړ",
     "NN9": "سې",
+    "NN9-persian": "لی",
     "a0": "غ.م.",
+    "a0-persian": "غ.م.",
     "a1": "غ.و.",
+    "a1-persian": "غ.و.",
     "durationLongDays": "one#{num} ورځ|#{num} ورځې",
     "durationMediumHours": "one#{num} h|#{num} h",
     "durationMediumMillis": "one#{num} ms|#{num} ms",
