Update to the latest ISO-15924

--- a/js/data/locale/scriptToRange.json
+++ b/js/data/locale/scriptToRange.json
@@ -532,6 +532,12 @@
             11519
         ]
     ],
+    "Cpmn": [
+        [
+            77712,
+            77810
+        ]
+    ],
     "Cprt": [
         [
             67584,
@@ -553,12 +559,6 @@
         ],
         [
             67647
-        ]
-    ],
-    "Cypro_Minoan": [
-        [
-            77712,
-            77810
         ]
     ],
     "Cyrl": [
