Fix test some test failures

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -2609,6 +2609,7 @@
         "ka-Geok": "ka-Geok-GE",
         "ka-Geor": "ka-Geor-GE",
         "ka-Gong": "ka-Gong-GE",
+        "ka-IR": "ka-Geor-IR",
         "kaa": "kaa-Cyrl-UZ",
         "kaa-Cyrl": "kaa-Cyrl-UZ",
         "kaa-UZ": "kaa-Cyrl-UZ",
@@ -2917,6 +2918,7 @@
         "ktr-MY": "ktr-Latn-MY",
         "ku": "ku-Latn-TR",
         "ku-Arab": "ku-Arab-IQ",
+        "ku-IQ": "ku-Arab-IQ",
         "ku-LB": "ku-Arab-LB",
         "ku-Latn": "ku-Latn-TR",
         "ku-TR": "ku-Latn-TR",
@@ -3965,6 +3967,7 @@
         "pt-GQ": "pt-Latn-GQ",
         "pt-GW": "pt-Latn-GW",
         "pt-Latn": "pt-Latn-BR",
+        "pt-MO": "pt-Latn-MO",
         "pt-MZ": "pt-Latn-MZ",
         "pt-PT": "pt-Latn-PT",
         "pt-ST": "pt-Latn-ST",
