a little bit of update

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -3956,6 +3956,7 @@
         "prg-Latn": "prg-Latn-001",
         "ps": "ps-Arab-AF",
         "ps-AF": "ps-Arab-AF",
+        "ps-PK": "ps-Arab-PK",
         "ps-Arab": "ps-Arab-AF",
         "pss": "pss-Latn-ZZ",
         "pss-Latn": "pss-Latn-ZZ",
