--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -1312,6 +1312,7 @@
         "bmu-ZZ": "bmu-Latn-ZZ",
         "bn": "bn-Beng-BD",
         "bn-BD": "bn-Beng-BD",
+        "bn-IN": "bn-Beng-IN",
         "bn-Beng": "bn-Beng-BD",
         "bng": "bng-Latn-ZZ",
         "bng-Latn": "bng-Latn-ZZ",
@@ -1828,6 +1829,7 @@
         "en-KE": "en-Latn-KE",
         "en-KI": "en-Latn-KI",
         "en-KN": "en-Latn-KN",
+        "en-KR": "en-Latn-KR",
         "en-KY": "en-Latn-KY",
         "en-LC": "en-Latn-LC",
         "en-LK": "en-Latn-LK",
@@ -2412,6 +2414,7 @@
         "hr-HR": "hr-Latn-HR",
         "hr-Latn": "hr-Latn-HR",
         "hr-ME": "hr-Latn-ME",
+        "hr-HU": "hr-Latn-HU",
         "hsb": "hsb-Latn-DE",
         "hsb-DE": "hsb-Latn-DE",
         "hsb-Latn": "hsb-Latn-DE",
